Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5391

Ep-testsuite should use a small value for param "couch_response_timeout"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • 2.0-beta
    • 2.0-beta
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      The default value is 3 minute. For test, it should be a small value. With randomized mock server failures, ep_testsuite would take long time to finish if using default value.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            liang Liang Guo (Inactive)
            liang Liang Guo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty