MB-5391 Use small value for couch_response_timeout in tests

The default value for engine parameter "couch_response_timeout" is
3 minute. In tests, it is set to 3 seconds for reasonable test
completion time.

Change-Id: I7689a417de270bde414037acc8e10ee4dcbfd326
Reviewed-on: http://review.couchbase.org/16479
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Liang Guo <liang@couchbase.com>